- fixed Safari whitespace wrap bug

--- a/css/main.css
+++ b/css/main.css
@@ -455,6 +455,7 @@ body {
   font-size: 16px;
   font-weight: bold;
   flex-shrink: 0;
+  white-space: nowrap;
 }
 
 .history-info {
